<resources>
    <string name="app_name">MyDailyLook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_transition">title transition</string>
    <string name="logo_transition">logo transition</string>

    <string name="google_geo_api_key">AIzaSyBcYCTr2M0ba4KNxCHVCkFx_JoeTaspW1c</string>
    <string name="daum_app_key">fa486e93d5204e98bea3e0dcf964277c</string>

    <string name="response_fail">잠시 후 다시 시도해 주세요.</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_message">Message</string>
    <string name="title_info">Info</string>
    <string name="title_check_email">이메일 인증</string>
    <string name="title_profile_input">개인정보 입력</string>
    <string name="title_profile_edit">개인정보 수정</string>
    <string name="title_location_search">위치 검색</string>
    <string name="title_register">게시글 등록</string>
    <string name="title_reply">댓글</string>
    <string name="title_setting">설정</string>

    <!-- 인트로 -->
    <string name="exit">종료</string>
    <string name="permission_retry">앱 실행에 필수적인 권한이 없습니다. 권한을 다시 설정하시겠습니까?</string>
    <string name="permission_deny_exit">권한이 설정되지 않아 앱을 종료합니다.</string>

    <!-- 로그인 -->
    <string name="login">로그인하세요</string>
    <string name="login_success">로그인 되었습니다.</string>
    <string name="invalid_email">등록되지 않은 이메일 입니다.</string>
    <string name="invalid_password">비밀번호가 맞지 않습니다.</string>
    <string name="not_register_profile">프로필이 등록되어 있지 않습니다.</string>
    <string name="not_auth_email_login">이메일이 인증되지 않았습니다.</string>

    <!-- 게시글 등록 -->
    <string name="content_write">내용 작성</string>
    <string name="posting_permission">공개 여부</string>
    <string name="add_location">위치 추가</string>
    <string name="share_posting">공유하기</string>
    <string name="select_picture">이미지 선택</string>
    <string name="toast_cannot_retrieve_selected_image">이미지 불러오기 실패</string>
    <string name="toast_cannot_retrieve_cropped_image">이미지 자르기 실패</string>
    <string name="toast_unexpected_error">예상치 못한 에러 발생</string>
    <string name="toast_cannot_add_image">이미지 최대 등록 갯수(4장) 를 초과하셨습니다.</string>
    <string name="permission_storage_retry">접근 권한이 없어 이미지를 불러올 수 없습니다. 권한을 다시 설정하시겠습니까?</string>
    <string name="permission_storage_deny">이미지를 불러올 수 없습니다.</string>
    <string name="input_content">내용을 입력해주세요.</string>
    <string name="input_thumbnail">사진을 등록해주세요.</string>
    <string name="success_posting">게시글이 등록되었습니다.</string>

    <!-- 이메일 인증 -->
    <string name="resend_auth_email">인증메일 재발송</string>
    <string name="complete_auth_email">인증 완료</string>
    <string name="other_account">다른 계정으로 로그인</string>
    <string name="not_auth_email">이메일 인증이 되지 않은 계정이 가입 되어있습니다.</string>
    <string name="send_auth_email">가입하신 이메일로 인증메일을 전송하였습니다.</string>
    <string name="resend_success">재발송이 완료되었습니다.</string>

    <!-- 게시글 상세 -->
    <string name="show_all_reply">댓글 %1$s개 모두 보기</string>
    <string name="page_total_count">%1$s/%2$s</string>

    <!-- 댓글 상세 -->
    <string name="write_reply">댓글 달기..</string>
    <string name="success_reply">댓글을 달았습니다.</string>

    <!-- 추천회원 리스트 -->
    <string name="following">팔로잉</string>
    <string name="add_follow">+팔로우</string>

    <!-- 검색 -->
    <string name="search_tag">#</string>
    <string name="search_member"><![CDATA["@"]]> </string>

    <!-- 설정 -->
    <string name="account">계정</string>
    <string name="modify_profile">프로필 수정</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="push_noti">푸시 알림</string>
    <string name="like_posting">회원님이 좋아한 게시물</string>
    <string name="introduce">소개</string>
    <string name="privacy_policy">개인정보취급방침</string>
    <string name="terms_of_service">서비스약관</string>
    <string name="open_source_library">오픈 소스 라이브러리</string>
    <string name="add_account">계정 추가</string>
    <string name="logout">로그아웃</string>

</resources>
