<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color"
        android:theme="@style/ToolbarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/title_setting"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_activity_setting"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingTitleTextView"
                    android:text="@string/account" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/modify_profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/change_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/push_noti" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/like_posting" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/add_account" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    android:id="@+id/tv_activity_setting_logout"
                    style="@style/SettingSubTextView"
                    android:text="@string/logout" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingTitleTextView"
                    android:text="@string/introduce" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/privacy_policy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/terms_of_service" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

                <TextView
                    style="@style/SettingSubTextView"
                    android:text="@string/open_source_library" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/icon_disabled" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>