<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_activity_auth_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/mainlogo"
            android:transitionName="@string/title_transition" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_activity_auth_email_not_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:text="@string/not_auth_email"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_activity_auth_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/main_color"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_activity_auth_other_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/main_color"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/other_account"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_activity_auth_email_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:text="@string/send_auth_email"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_activity_auth_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/red_900"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/resend_auth_email"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_activity_auth_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/main_color"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/complete_auth_email"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>