<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_activity_posting_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tv_activity_posting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_activity_posting_close"
            android:text="@string/title_register"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:transitionName="@string/title_transition" />

        <ImageView
            android:id="@+id/iv_activity_posting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_check" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_a_photo" />

        <ImageView
            android:id="@+id/iv_activity_posting_thumb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_line" />

        <EditText
            android:id="@+id/et_activity_posting_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_activity_posting_thumb"
            android:background="@null"
            android:hint="@string/content_write"
            android:textSize="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_activity_posting_added_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_activity_posting_add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/main_color"
            android:padding="20dp"
            android:src="@drawable/ic_add" />

        <LinearLayout
            android:id="@+id/ll_activity_posting_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/main_color" />

    <LinearLayout
        android:id="@+id/ll_activity_posting_add_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_activity_posting_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_place"
            android:tint="@color/main_color" />

        <TextView
            android:id="@+id/tv_activity_posting_add_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/add_location"
            android:textColor="@color/main_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_activity_posting_place_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_activity_posting_place_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_activity_posting_place_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="addr"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_activity_posting_place_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_cancel"
            android:tint="@color/colorAccent"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_visibility"
            android:tint="@color/main_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/posting_permission"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <com.rey.material.widget.Spinner
            android:id="@+id/spinner_activity_posting_permission"
            style="@style/Material.Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            app:spn_label="공개여부"
            app:spn_labelEnable="false"
            app:spn_labelTextColor="@color/main_color"
            app:spn_labelTextSize="16sp" />

    </LinearLayout>

</LinearLayout>